--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
-  font-family: "Baloo Da 2", cursive;
+  font-family: "Roboto", sans-serif;
 }
 body {
   background-color: rgb(245, 245, 245);
