--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
   font-family: "Roboto", sans-serif;
 }
 body {
-  background-color: rgb(254, 254, 254);
+  background-color: #eeeeee;
   overflow-x: hidden;
   margin: 0;
 }
